--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -6,25 +6,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    
 
     <title>Sabores da Nossa Vida</title>
 
-    <!-- Bootstrap Core CSS -->
-    <!--<link href="css/bootstrap.min.css" rel="stylesheet"> -->
-
-    <!-- Custom CSS: You can use this stylesheet to override any Bootstrap styles and/or apply your own styles -->
-    <!--<link href="css/custom.css" rel="stylesheet"> -->
+    
     
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
+    <link rel="stylesheet" href="{% static 'css/novo_estilo.css' %}">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    
 
 </head>
 
@@ -41,37 +33,30 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">
-                	<span class="glyphicon glyphicon-fire"></span> 
-                	Logo
+                <a class="navbar-brand" href="{% url 'home' %}">
+                	<span class="glyphicon glyphicon-cutlery"></span> 
+                	
+                	<img id="icone_logo" class="img-responsive img-rounded" src="{% static 'images/peixe.png' %}" alt="">
                 </a>
             </div>
             <!-- Navbar links -->
             <div class="collapse navbar-collapse" id="navbar">
                 <ul class="nav navbar-nav">
-                    <li class="active">
-                        <a href="#">Home</a>
-                    </li>
-                    <li>
-                        <a href="#">About</a>
-                    </li>
-                    <li>
-                        <a href="#">Products</a>
-                    </li>
+                    
 					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services <span class="caret"></span></a>
+						<a id="menu_drop" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">receitas <span class="caret"></span></a>
 						<ul class="dropdown-menu" aria-labelledby="about-us">
-							<li><a href="#">Engage</a></li>
-							<li><a href="#">Pontificate</a></li>
-							<li><a href="#">Synergize</a></li>
+							<li><a href="{% url 'receita_nova' %}">Nova Receita</a></li>
+							<li><a href="{% url 'editar' %}">Editar Receita</a></li>
+							<li><a href="{% url 'excluir' %}">Excluir Receita</a></li>
 						</ul>
 					</li>
                 </ul>
 
 				<!-- Search -->
-				<form class="navbar-form navbar-right" role="search">
+				<form class="navbar-form navbar-right" role="search" action="{% url 'listar' %}"method="post">{% csrf_token %}
 					<div class="form-group">
-						<input type="text" class="form-control">
+						<input placeholder="Prato ou tempo em minutos" type="text" class="form-control" name="campo_busca">
 					</div>
 					<button type="submit" class="btn btn-default">Search</button>
 				</form>
@@ -84,24 +69,17 @@
 
 	<div class="jumbotron feature">
 		<div class="container">
-			<h1><span class="glyphicon glyphicon-equalizer"></span> Sabores Caseiros</h1>
+			<h1><span class="glyphicon glyphicon-cutlery"></span></span> Sabores Caseiros</h1>
 			<p>Pratos típicos da cozinha brasileira, veja nossas receitas</p>
 		
 		</div>
 	</div>
 
     <!-- Content -->
-    <div class="container">
+    <div id="principal" class="container">
 
         <!-- Heading -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">Receitas especiais
-                    
-                </h1>
-                <p>Se delicie com nossas receitas especias, temos uma grande variedade de receitas para todos os tipos de pratos</p>
-            </div>
-        </div>
+       
         <!-- /.row -->
 
         <!-- Feature Row -->
@@ -110,7 +88,7 @@
             {% endblock %}
             
         <!-- /.row -->
-
+		</div>
     </div>
     <!-- /.container -->
 	
@@ -119,19 +97,24 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-4 footer-blurb-item">
-						<h3><span class="glyphicon glyphicon-fire"></span> Dynamically Procrastinate</h3>
-						<p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-						<p><a class="btn btn-default" href="#">Procrastinate</a></p>
+						<h3><span class="glyphicon glyphicon-pencil"></span> Trabalho Final de Programação WEB - IFPI</h3>
+						<p>Professor: Ritomar</p>
+						<p>Aluno: Elke Maclaine de Oliveira Sabino</p>
+						<p>Modulo: IV</p>
 					</div>
 					<div class="col-sm-4 footer-blurb-item">
-						<h3><span class="glyphicon glyphicon-cloud-upload"></span> Efficiently Unleash</h3>
-						<p>Dramatically maintain clicks-and-mortar solutions without functional solutions. Efficiently unleash cross-media information without cross-media value. Quickly maximize timely deliverables for real-time schemas. </p>
-						<p><a class="btn btn-default" href="#">Unleash</a></p>
+						<h3><span class="glyphicon glyphicon-list-alt"></span> Atividade Exigida</h3>
+						<p>Desenvolver um programa para WEB com Python e Django para manipular uma ou mais tabelas de
+bancos de dados e utilizar template que faça uso de CSS e/ou Java Script. O programa deverá
+obrigatoriamente realizar operações de inserção, exclusão, alteração etc. </p>
+						
 					</div>
 					<div class="col-sm-4 footer-blurb-item">
-						<h3><span class="glyphicon glyphicon-leaf"></span> Completely Synergize</h3>
-						<p>Professionally cultivate one-to-one customer service with robust ideas. Completely synergize resource taxing relationships via premier niche markets. Dynamically innovate resource-leveling customer service for state of the art customer service.</p>
-						<p><a class="btn btn-default" href="#">Synergize</a></p>
+						<h3><span class="glyphicon glyphicon-ok"></span>Atividades Realizadas</h3>
+						<p>Foi realizado o que foi exigido, foi usado um template como front. O tema escolhido foi controle de receitas, onde no menu receitas na parte superior temos as opções de inserir uma nova receita como também editar e excluir.Foi usado CSS para estilizar alguns textos e controloar alguns botões como também alinhamentos.
+							O campo de busca obtem resultados pelo nome do prato ou pelo tempo de preparo em minutos
+							O site é responsivo</p>
+						
 					</div>
 
 				</div>
@@ -141,8 +124,8 @@
         
         <div class="small-print">
         	<div class="container">
-        		<p><a href="#">Terms &amp; Conditions</a> | <a href="#">Privacy Policy</a> | <a href="#">Contact</a></p>
-        		<p>Copyright &copy; Example.com 2015 </p>
+        		<p><a href="http://www.github.com/maclainesabino">Elke Maclaine</a></p>
+        		<p>Copyright &copy; 2017 </p>
         	</div>
         </div>
 	</footer>
